pkg/lang/syntax/testdata/ub/validate/invalid/factory/action-lock-boolean.ub
factory: {
  imports: { core: 'example.com/core' }
  actions: {
    deploy: core.thing { @lock: true }
  }
}
